Adds CounNumber server to deal with Ajax

--- a/app/index.html
+++ b/app/index.html
@@ -84,6 +84,8 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/services/count-number.js"></script>
+        <script src="scripts/services/api_url.js"></script>
         <!-- endbuild -->
 </body>
 </html>
