--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,9 @@
       <div class="navbar navbar-default" role="navigation" style="margin-bottom: 0px;">
         <div class="container">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#/">Wishpond Counter</a>
+            <a class="navbar-brand" target="_blank" href="https://github.com/alexvko">
+              Wishpond Counter
+            </a>
           </div>
         </div>
       </div>
