--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/services/count-number.js"></script>
         <script src="scripts/services/api_url.js"></script>
+        <script src="scripts/services/datahelpers.js"></script>
         <!-- endbuild -->
 </body>
 </html>
